fix scrollbars in blog list

--- a/assets/styles/blog.less
+++ b/assets/styles/blog.less
@@ -32,5 +32,5 @@ main {
         border-spacing: 1rem;
     }
 
-    overflow: scroll;
+    overflow: hidden;
 }
